--- a/examples/flutter-starter-firebase/api_sdk/pubspec.yaml
+++ b/examples/flutter-starter-firebase/api_sdk/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http:
   cloud_firestore: ^0.12.9
   firebase_core: ^0.4.0+8
+  firebase_auth:
   get_it: ^1.0.3+2
   graphql: ^3.0.0
   graphql_flutter: ^3.0.0
