--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   fluttertoast: ^7.1.1
   cached_network_image: ^2.3.3
   flutter_staggered_grid_view: ^0.4.0
+  otp_text_field: ^1.1.0
   shared:
     path: ../shared
 dev_dependencies:
