--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   otp_text_field: ^1.1.0
   razorpay_flutter: ^1.2.5
+  flutter_svg:
   shared:
     path: ../shared
 dev_dependencies:
@@ -61,6 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/google.svg
+    - assets/images/facebook.svg
     - assets/images/fslogo.png
     - assets/images/logo.png
     - assets/images/2.0x/logo.png
