--- a/api_sdk/pubspec.yaml
+++ b/api_sdk/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,18 +24,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   http:
-  
+  cloud_firestore: ^0.12.9
+  firebase_core: ^0.4.0+8
+  firebase_auth:
   graphql: ^3.0.0
   graphql_flutter: ^3.0.0
   gql: ^0.12.4-alpha
   freezed_annotation: 0.12.0
 
   equatable: ^1.0.2
+  shared:
+    path: ../shared
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +49,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
