--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,21 +28,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   provider:
-  webview_flutter: ^1.0.6
-  cloud_firestore: ^0.12.9
-  firebase_core: ^0.4.0+8
-  flutter_bloc: ^6.0.6
+  webview_flutter: ^3.0.0
+  cloud_firestore: ^3.1.7
+  firebase_core: ^1.12.0
+  flutter_bloc: ^8.0.1
   meta: ^1.1.6
-  bloc: ^6.0.3
-  equatable: ^1.1.0
+  bloc: ^8.0.2
+  equatable: ^2.0.3
   fluttertoast: ^7.1.1
-  cached_network_image: ^2.3.3
+  cached_network_image: ^3.2.0
   shared:
     path: ../shared
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^0.1.9
+  flutter_native_splash: ^2.0.2
 
 flutter_native_splash:
   image: assets/images/logo.png
