🚀 localisation set up

--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -34,6 +34,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleLocalizations</key>
+<array>
+  <string>fr</string>
+  <string>en</string>
+  <string>es</string>
+</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
