--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   json_annotation: ^4.6.0
   bloc: ^8.1.0
   go_router: ^4.4.1
-
+  provider: ^6.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
