--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  bloc_test: ^9.1.0
+  mocktail: ^0.3.0
+
 flutter_native_splash:
   image: assets/images/logo.png
   color: "5E92F3"
