--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app">
+    package="com.example.flutter_starter">
    <application
-        android:label="app"
+        android:label="flutter_starter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
