--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,24 +31,24 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.18.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  flutter_bloc: ^8.1.1
-  equatable: ^2.0.3
-  fluttertoast: ^8.0.9
-  cached_network_image: ^3.2.0
-  http:
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  fluttertoast: ^8.2.2
+  cached_network_image: ^3.2.3
+  http: ^0.13.3
   http_interceptor: ^1.0.2
-  shared_preferences: ^2.0.12
-  retrofit: ^3.0.1+1
-  dio: ^4.0.6
-  built_value: ^8.4.1
-  json_annotation: ^4.6.0
-  bloc: ^8.1.0
-  go_router: ^4.4.1
-  graphql_flutter: ^5.1.0
+  shared_preferences: ^2.1.2
+  retrofit: ^4.0.1
+  dio: ^5.2.1+1
+  built_value: ^8.6.1
+  json_annotation: ^4.8.1
+  bloc: ^8.1.2
+  go_router: ^8.2.0
+  graphql_flutter: ^5.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,11 +58,11 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutter_native_splash: ^2.0.2
-  retrofit_generator: ^4.0.3+1
-  build_runner: ^2.2.0
-  json_serializable: ^6.3.1
-  built_value_generator: ^8.4.1
+  flutter_native_splash: ^2.3.1
+  retrofit_generator: ^7.0.1+1
+  build_runner: ^2.4.5
+  json_serializable: ^6.7.0
+  built_value_generator: ^8.6.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
